tests/examples/bad/type_not_subtype_of.lat
int main() {
    A a;
    B b;
    C c;
    a = c;
    return 0;
}

class A {}
class B extends A {}
class C {}